--- a/frontend/src/components/Games/Details/GameDetails/GameDetails.scss
+++ b/frontend/src/components/Games/Details/GameDetails/GameDetails.scss
@@ -9,10 +9,9 @@ $game-details-toolbar-icon-size: 1.25rem;
 .game-details {
   position: relative;
   display: flex;
-  height: $app-min-height;
-  min-height: $app-min-height;
+  min-height: 0;
+  flex: 1;
   flex-direction: column;
-  margin: -$spacing-xl;
   overflow: hidden;
   background: $color-background;
   color: $color-text-primary;
